index.css
/* ... */
.big {
    display: block;
    position: absolute;
    top: 10%;
    left: 4%;
    color: black;
    font-size: 7vw;
    width: 100%;
    text-align: center;
    font-family: "Serif"; /* Times; */
}

@media only screen and (max-width: 780px) {

  .dm {
    width: 100%;
    font-size: 1.1em;
    padding : 0px;
    margin: 10px;
  }

  .dm ul {
    padding: 0;
    padding-left: 2.5%;
  }

  .dma {
    padding: 0;
    margin: 0;
    width: 1px;
    padding-left: .1rem;
  }

    html, body {
        min-width: 100vw;
        overflow-y: auto;
    }

    #design {
        top: 45vh;
        background: rgba(0, 0, 0, .7)
    }

    .fullpage {
        width: 100%;
        background-color: rgba(233, 239, 244, .95);
        margin-bottom: 00%;
        margin-left: 0;
        min-height: 500px;
        padding: 0%;
        padding-top: calc( 2em + 2% );
    }

    #content0 {
        width: 100%;
        min-height: 100vh;
        left: 0%;
        top: 0px;
    }

    .text {
        height: 35%;
        /* max-height: 30%; */
        top: calc(-5vh + 20%);
        width: 100%;
        margin: 5%;
        padding: 5%;
        left: 0;
        /* margin-right: 2px; */
        font-size: 128%;
        left: 8.5%;
    }

    .text ul {
      padding: 5%;
      background: none;
    }

    .text ul li {
    }

    .donate_button {
      background: rgba(36, 160, 237, 1);
      border: solid 5px rgba(17, 131, 202, 1);
      width: auto;
      height: 2.5rem;
      width: 6rem;
      padding-left: 0rem;
      padding-top: .5rem;
      padding-bottom: 0rem;
      color: white;
      font-weight: 3rem;
      transform: translate(1.5rem, -.2em);
      text-align: center;
    }

    .donate_button:hover {
      transition: all .7s;
      background: rgba(36, 160, 0, 1);
      border: solid 5px rgba(17, 131, 0, 0);
    }

    .share_rocket {
      margin-bottom: -1.5rem;
      transform: translate(calc( .5rem + 1rem + 3rem ), calc( -.2em - 2.5rem + 3rem ));
    }

    .text::-webkit-scrollbar {}

    .text::-webkit-scrollbar-thumb {
        background-color: rgba(190, 77, 77, 1);
    }

    .fullimg {
        height: 55%;
        bottom: 0;
        width: 100%;
        margin: 0;
        max-width: 100%;
        top: 65%;
        left: 0;
        margin: 0;
        right: 1%;
        min-height: 200px;
    }

    .ytv {
        margin-top: -35%;
        width: 100vw;
        height: 56vw;
        min-height: calc(100px + 25vw);
        max-height: 85%;
    }

    .fullimgh {
        height: 65%;
        bottom: 0;
        width: 100%;
        margin: 0;
        max-width: 100%;
        top: 65%;
        left: 0;
        margin: 0;
        right: 1%;
        overflow: hidden;
        min-height: 200px;
    }

    .fullvidh {
        height: calc(20px + 65%);
        width: 100%;
        margin: 0;
        max-width: 100%;
        top: 70%;
        left: 0;
        margin: 0;
        right: 1%;
        overflow: visible;
        min-height: 200px;
        border-radius: 5px;
    }

    .ital {
      top: 0;
      left: 0;
      position: absolute;
      transform: translate( calc( -2.5% + .3em ), 0);
      width: calc( 100% + 2.5% + .4em );
      height: calc( .05em + .2% );
      background: rgba(0, 50, 80, 1);
      padding-top: .45em;
      font-size: calc( 1.4em + .2vw + 10px );
      padding-right: 0em;
    }

    .tab_img {
      right: 0;
      height: 100%;
      width: auto;
      max-width: 25%;
    }

    .right_side {
        position: absolute;
        background: rgba(0, 0, 0, 0);
        left: 0;
        bottom: -50px;
        top: 120%;
        width: 100%;
        height: calc(4% + 8px);
        z-index: 14;
    }

    .cont_gd_off {
        transition: all .3s;
        z-index: 7;
        position: relative;
        width: 0rem;
        height: 100%;
        /*

        overflow: hidden;
        display: inline-block;
        padding: 4px;
        margin-left: 2px;
        margin-bottom: 2px;
        font-size: 8%;
        margin-top: calc(4px - 10%);
        padding-top: 0px;
        */
    }

    .slider_container {
        width: 100%;
        right: 0%;
        top: 55%;
        height: 50%;
        position: absolute;
    }

    .ba-slider {
        z-index: 3;
        overflow: hidden;
        width: 100%;
        right: 0%;
        top: 55%;
        height: auto;
        position: absolute;
    }

    .cont_gd_off_after {
        font-size: 15px;
        padding: 0;
        text-align: center;
    }

    .big {
        display: none;
    }

    .in-view {
        transition: all 1s;
        transform: translate(0, 4vh);
        opacity: 1;
    }

    #landimg_desktop {
        display: none;
        left: -100rem;
        width: 150rem;
        height: 90rem;
    }
    #landimg_mobile {
      display: block;
    }

    iframe {
        width: 365px;
        height: 560px;
    }

    html,
    body {
        overflow: hidden;
        overflow-x: hidden;
        overflow-y: scroll;
        width: 97.5vw;
    }

    body::-webkit-scrollbar,
    html::-webkit-scrollbar {
        display: none;
    }

    .contentLast {
        margin-bottom: 0;
    }

    #hold_contact {
        position: relative;
        margin-top: 15%;
        width: 75%;
        margin-left: 0%;
        left: 12%;
        height: 50%;
    }

    .close_graphic {
        display: none;
    }

    .center_btn {
        left: 40%;
        width: 20%;
    }

    .jumpin {
        transition: all .5s;
        transform: none;
        opacity: 0.01;
    }

    .in-view {
        transition: all 1s;
        transform: none;
        opacity: 1;
    }

    .oval_wide {
        width: 70%;
        height: 25%;
        top: 45%;
        left: 5.5%;
    }

    .oval_tall {
        width: 40%;
        height: 40%;
        top: 35%;
        left: 2.5%;
    }

    .oval_off {
        transform: scale(.5);
        top: 57%;
        left: 1%;
        animation: none;
        opacity: .7;
    }
}
/* ... */

